[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelComponents/Door.gd" type="Script" id=1]
[ext_resource path="res://Assets/tileset.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/DoorOpen.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/DoorClose.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 7.4969 )

[sub_resource type="Animation" id=2]

resource_name = "close_door"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00207651 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 352, 112, 32, 48 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "open_door"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 352, 112, 32, 48 ), Rect2( 384, 112, 32, 48 ), Rect2( 384, 112, 2, 48 ) ]
}

[node name="Door" type="Node2D"]
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
door_open = false

[node name="NOTE" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 38.0
margin_right = 822.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = "The door is a static body. When a guard opens the door, the collision ability
is shut off so that the guard can walk right through.

 I could have made the collision swing like an actual door, but
this let me avoid collision issues between the guard and the door.

The door animations can be placed inside extensions for the door.

Get rid of the button and guard when finished testing.


IGNORE THE SPRITE. I meant for it to be it's own scene for animating
the games doors."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "The door is a static body. When a guard opens the door, the collision ability
is shut off so that the guard can walk right through.

 I could have made the collision swing like an actual door, but
this let me avoid collision issues between the guard and the door.

The door animations can be placed inside extensions for the door.

Get rid of the button and guard when finished testing.


IGNORE THE SPRITE. I meant for it to be it's own scene for animating
the games doors."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="Sprite" type="Sprite" parent="."]
z_index = 6
texture = ExtResource( 2 )
centered = false
offset = Vector2( -16, -24 )
region_enabled = true
region_rect = Rect2( 352, 112, 32, 48 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="Col" type="StaticBody2D" parent="."]
position = Vector2( 0, 15.4969 )
input_pickable = false
collision_layer = 1
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
physics_material_override = null
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Col"]
visible = false
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close_door = SubResource( 2 )
anims/open_door = SubResource( 3 )
blend_times = [  ]

[node name="Audio_Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Audio_Close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 0.0089742
bus = "Master"
area_mask = 1

[connection signal="interact" from="." to="." method="_on_Door_interact"]
